added footer to home page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -345,3 +345,21 @@ a.btn
 
 .page-padding
   margin: 25px
+
+.homefooter
+  font-size: 12px
+  background: #fff
+  width: 100%
+  margin-left: 25px
+  border-collapse: collapse
+  text-align: left
+
+.homefooter th
+  font-size: 14px
+  font-weight: normal
+  color: #6699C9
+  padding: 10px 6px
+
+.homefooter td
+  padding: 2px 6px
+
