--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -197,5 +197,84 @@
 	        <iframe width="300" height="250" src="http://www.youtube.com/embed/abMDBbxpsGo?rel=0" frameborder="0"></iframe>
 	    </div>
 	    <div class="cl">&nbsp;</div>
+		<p style="margin-top:25px"><a href="http://www.cloudspokes.com">CloudSpokes</a> was created as an independent crowdsourcing development community and 
+			marketplace that matches companies who need cloud development work with a worldwide community of cloud experts. The focus for CloudSpokes is solely 
+			on using public cloud platforms to build and deliver enterprise-class solutions.</p> 
+
+		<p>The flexibility of public cloud platforms has created a unique point where, for the first time, dramatic innovation can occur with both the underlying 
+			technology model and how results are delivered to businesses. For <%= link_to "developers", members_url %> this creates a market for their talents, 
+			lets them develop new skills with <%= link_to "real world assignments", challenges_url %> and transition their careers to the cloud, learn from the 
+			work of others, and establish their street cred as skilled practitioner in the art and science of cloud development.</p>
+
+		<p>Companies who need cloud development work can sponsor a <%= link_to "challenge", challenges_url %> on CloudSpokes, giving 
+			<%= link_to "developers", members_url %> a way to earn cash rewards, test and prove their skills for badges and other recognition. 
+			<%= link_to "Challenges appear on a list", challenges_url %> visible to all <%= link_to "developer members", members_url %>, along with the award amount and pre-defined success 
+			criteria so all participants are aware of how they’ll be judged. Submissions are scored by a peer review board and awarded to the best submission. 
+			Those participating in the challenge can then see other submissions and learn from their peers. The developer members’ public profile is updated to 
+			include challenge history, recommendations, and badges to build their profile inside the community and among potential employers.</p>
+			
+			<table class="homefooter" id="answers">
+			    <thead>
+			    	<tr>
+						<th scope="col">Platforms</th>
+			            <th scope="col">Languages</th>
+						<th scope="col">Badges</th>
+						<th scope="col">Partners</th>
+						<th scope="col">Events</th>
+			        </tr>
+			    </thead>
+			    <tbody>
+			    	<tr>
+						<td>Amazon Web Services</td>
+						<td width="18%">Apex</td>
+						<td width="18%">CloudSpoker</td>
+						<td width="18%">Box</td>
+						<td width="18%">Defrag</td>
+			        </tr>
+			    	<tr>
+						<td>Cloud Foundry</td>
+						<td>HTML5</td>
+						<td>Traveler</td>
+						<td>DocuSign</td>
+						<td>Dreamforce</td>
+			        </tr>
+			    	<tr>
+						<td>Google App Engine</td>
+						<td>Java</td>
+						<td>Adventurer</td>
+						<td>FullContact API</td>
+						<td>Gluecon</td>
+			        </tr>
+			    	<tr>
+						<td>Heroku</td>
+						<td>JavaScript</td>
+						<td>Ninja</td>
+						<td>PHP Fog</td>
+						<td>MonkiGras</td>
+			        </tr>
+			    	<tr>
+						<td>Salesforce & Force.com</td>
+						<td>Objective-C</td>
+						<td>Samurai</td>
+						<td></td>
+						<td>Waza</td>
+			        </tr>
+			    	<tr>
+						<td></td>
+						<td>Python</td>
+						<td></td>
+						<td></td>
+						<td></td>
+			        </tr>
+			    	<tr>
+						<td></td>
+						<td>Ruby</td>
+						<td></td>
+						<td></td>
+						<td></td>
+			        </tr>
+			    </tbody>
+			</table>
+			
 	</div>
 	<!-- END Columns -->
