touch up of sytyles and links

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -349,7 +349,7 @@ a.btn
 .homefooter
   font-size: 12px
   background: #fff
-  width: 100%
+  width: 98%
   margin-left: 25px
   border-collapse: collapse
   text-align: left
@@ -362,4 +362,12 @@ a.btn
 
 .homefooter td
   padding: 2px 6px
+
+.homefooter a
+  color: #444
+  text-decoration: none
+  &:hover
+    text-decoration: underline
+  &:visited
+    color: #444
 
