--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -225,39 +225,39 @@
 			    </thead>
 			    <tbody>
 			    	<tr>
-						<td>Amazon Web Services</td>
+						<td><a href="http://aws.amazon.com" target="_blank">Amazon Web Services</a></td>
 						<td width="18%">Apex</td>
 						<td width="18%">CloudSpoker</td>
-						<td width="18%">Box</td>
-						<td width="18%">Defrag</td>
+						<td width="18%"><a href="http://www.box.com" target="_blank">Box</a></td>
+						<td width="18%"><a href="http://www.defragcon.com" target="_blank">Defrag</a></td>
 			        </tr>
 			    	<tr>
-						<td>Cloud Foundry</td>
+						<td><a href="http://cloudfoundry.com" target="_blank">Cloud Foundry</a></td>
 						<td>HTML5</td>
 						<td>Traveler</td>
-						<td>DocuSign</td>
-						<td>Dreamforce</td>
+						<td><a href="http://www.docusign.com" target="_blank">DocuSign</a></td>
+						<td><a href="http://www.salesforce.com/events" target="_blank">Dreamforce</a></td>
 			        </tr>
 			    	<tr>
-						<td>Google App Engine</td>
+						<td><a href="http://code.google.com/appengine" target="_blank">Google App Engine</a></td>
 						<td>Java</td>
 						<td>Adventurer</td>
-						<td>FullContact API</td>
-						<td>Gluecon</td>
+						<td><a href="http://www.fullcontact.com" target="_blank">FullContact API</a></td>
+						<td><a href="http://gluecon.com" target="_blank">Gluecon</a></td>
 			        </tr>
 			    	<tr>
-						<td>Heroku</td>
+						<td><a href="http://www.heroku.com" target="_blank">Heroku</a></td>
 						<td>JavaScript</td>
 						<td>Ninja</td>
-						<td>PHP Fog</td>
-						<td>MonkiGras</td>
+						<td><a href="http://www.phpfog.com" target="_blank">PHP Fog</a></td>
+						<td><a href="http://monkigras.com" target="_blank">MonkiGras</a></td>
 			        </tr>
 			    	<tr>
-						<td>Salesforce & Force.com</td>
+						<td><a href="http://developer.force.com" target="_blank">Salesforce & Force.com</a></td>
 						<td>Objective-C</td>
 						<td>Samurai</td>
 						<td></td>
-						<td>Waza</td>
+						<td><a href="http://waza.heroku.com" target="_blank">Waza</a></td>
 			        </tr>
 			    	<tr>
 						<td></td>
