moved styles to erb

--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -56,6 +56,13 @@
 #featured-challenge .info strong { font-weight: normal; font-size: 15px; color: #000; padding-right: 5px; }
 #featured-challenge .prize-info { width: 115px; padding-top: 5px; }
 #featured-challenge .prize { background: url(http://cloudspokes.s3.amazonaws.com/icon-prize.gif) no-repeat 0 0; padding-left: 35px; display :block; height: 32px; line-height: 32px; color: #000C4C; font-size: 15px; }
+
+.homefooter {  font-size: 12px; background: #fff;  width: 98%;  margin-left: 25px;  border-collapse: collapse;  text-align: left; }
+.homefooter th {  font-size: 14px;  font-weight: normal;  color: #6699C9;  padding: 10px 6px; }
+.homefooter td {  padding: 2px 6px; }
+.homefooter a {  color: #444;  text-decoration: none; }
+.homefooter a:hover {  text-decoration: underline; }
+.homefooter a:visited {  color: #444; }
 </style>
 
 <div id="dashboard">
