added meta tag and text for practice

--- a/app/views/quizes/practice.html.erb
+++ b/app/views/quizes/practice.html.erb
@@ -7,7 +7,11 @@
 
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
-<p style="margin-top:25px;margin-left:25px;margin-right:25px"><b>Need some text here on how this works.</b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin dignissim adipiscing. Vivamus eu nisi in est porta aliquam. Aliquam a blandit nulla. Donec non ligula sodales nisi bibendum congue quis ut enim. Proin interdum, nulla ac vulputate congue, est nisi luctus justo, nec semper nisl justo mollis velit. Vestibulum congue massa et orci tincidunt imperdiet. Duis ac nisi tellus, auctor facilisis neque. Phasellus ut nisl a mauris venenatis feugiat et id purus. Maecenas non dolor massa. Suspendisse faucibus, odio quis lobortis lacinia, arcu quam ornare nibh, id pretium justo leo consectetur nisl. Nulla facilisi. Cras at nibh leo, at fringilla nisl. Proin vitae cursus sapien.</p> 
+<p style="margin-top:25px;margin-left:25px;margin-right:25px">In the code segment for each question, there is a single error on a single line.  
+	Correct the error by changing the fewest possible characters on the line. Do not make changes that are not needed to fix the code.  
+	Pay attention to any ASSERT functions; they must evaluate to TRUE for the code to be considered correct.
+	<br/><br/>Whoever answers the most answers correct the fastest is the winner. The number of correct answers is the more important factor, so don’t rush.
+	</p>
 <div class="editPane">
     <div id="editor"></div>
 </div>
