added the word second to the column

--- a/app/views/quizes/results.html.erb
+++ b/app/views/quizes/results.html.erb
@@ -21,7 +21,7 @@ $(function() {
   function addRow(obj) {
 	// if the id is not already in the array then add it to the array and table
 	if ($.inArray(obj.Id, ids) == -1) {
-		$('#answers tr:last').after('<tr><td>'+ obj.Type__c +'</td><td>'+ obj.Elapsed_Time_Seconds__c +'</td><td><img alt="'+ obj.Is_Correct__c +'" src="/assets/answer-'+ obj.Is_Correct__c +'.png" width="40"/></td></tr>');	
+		$('#answers tr:last').after('<tr><td>'+ obj.Type__c +'</td><td>'+ obj.Elapsed_Time_Seconds__c +' seconds</td><td><img alt="'+ obj.Is_Correct__c +'" src="/assets/answer-'+ obj.Is_Correct__c +'.png" width="40"/></td></tr>');	
 		ids.push(obj.Id);
 		console.log(obj.Id + ' - added');
 	} else {
