--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -211,7 +211,7 @@
 		<p>The flexibility of public cloud platforms has created a unique point where, for the first time, dramatic innovation can occur with both the underlying 
 			technology model and how results are delivered to businesses. For <%= link_to "developers", members_url %> this creates a market for their talents, 
 			lets them develop new skills with <%= link_to "real world assignments", challenges_url %> and transition their careers to the cloud, learn from the 
-			work of others, and establish their street cred as skilled practitioner in the art and science of cloud development.</p>
+			work of others, and establish their street cred as a skilled practitioner in the art and science of cloud development.</p>
 
 		<p>Companies who need cloud development work can sponsor a <%= link_to "challenge", challenges_url %> on CloudSpokes, giving 
 			<%= link_to "developers", members_url %> a way to earn cash rewards, test and prove their skills for badges and other recognition. 
