--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="0b5UAqY-jFcSFdwuJOMT6arbK7RxdSzR-utYf1Pe6_k" />
   <meta name="Description" content="With 30K members and over $300,000 in developer contest prizes awarded, CloudSpokes is the Industry's first Cross-Cloud Development Community. CloudSpokes was created as an independent crowdsourcing development community and marketplace that matches companies who need cloud development work with a worldwide community of cloud experts. The focus for CloudSpokes is solely on using public cloud platforms to build and deliver enterprise-class solutions. The flexibility of cloud platforms has created a unique point where, for the first time, dramatic innovation can occur with both the underlying technology model and how results are delivered to businesses. For developers this creates a market for their talents, lets them develop new skills with real world assignments and transition their careers to the cloud, learn from the work of others, and establish their street cred as skilled practitioner in the art and science of cloud development.">
   <title><%= title %></title>
   <link href='http://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
