all streaming qq page

--- a/app/views/quizes/results.html.erb
+++ b/app/views/quizes/results.html.erb
@@ -63,7 +63,7 @@ $(function() {
 						</div>
 					
 						<span style="float: right;">
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/xg1G6c" data-text="I got <%= @results['Number_Correct__c'] %> correct answers in <%= @results['Display_Time__c'] %> on the Daily @cloudspokes QuickQuiz! Think you can beat my score?" data-size="large" data-count="none">Tweet</a>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/wdsulg" data-text="I got <%= @results['Number_Correct__c'] %> correct answers in <%= @results['Display_Time__c'] %> on the Daily @cloudspokes Quick Quiz! Think you can beat my score?" data-size="large" data-count="none">Tweet</a>
 						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</span>
 						<div style="clear: both;padding-bottom:25px"></div>
@@ -76,7 +76,7 @@ $(function() {
 						</div>
 				
 						<span style="float: right;">
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/xg1G6c" data-text="I just finished the March Madness @cloudspokes QuickQuiz! Think you can beat my score?" data-size="large" data-count="none">Tweet</a>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/wdsulg" data-text="I just finished the March Madness @cloudspokes Quick Quiz! Think you can beat my score?" data-size="large" data-count="none">Tweet</a>
 						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</span>
 						<div style="clear: both;padding-bottom:25px"></div>
