--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -4,9 +4,10 @@
 <link rel="stylesheet" href="/assets/quickquiz/CodeMirror-2.2/theme/eclipse.css" />
 
 <div class="page-heading"><h2 class="melbourne">Quick Quiz</h2></div>
-<p style="margin-top:25px;margin-left:25px;margin-right:25px">In the code segment below, there is a single error on a single line.  Correct the error by changing the fewest 
-	possible characters on the line.  Do not make changes that are not needed to fix the code.  Pay attention to 
-	any ASSERT functions; they must evaluate to TRUE for the code to be considered correct.</p>
+<p style="margin-top:25px;margin-left:25px;margin-right:25px">In the code segment for each question, there is an error on a single line.  
+	Correct the error by changing the fewest possible characters on that one line. Do not make changes that are not needed to fix the code.  
+	Some questions will include additional details or instructions in the comments.  For those questions where the code includes an ASSERT 
+	function, it must evaluate to TRUE for the code to be considered correct.</p>
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
 
