--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -71,7 +71,7 @@
   - if @member["Website__c"]
     .website
       %strong Website :
-      %a{:href => "http://"+@member["Website__c"], :target => "_blank"}
+      %a{:href => @member["Website__c"], :target => "_blank"}
         = @member["Website__c"]
 
   %br
