--- a/app/views/challenges/show_quickquiz.html.erb
+++ b/app/views/challenges/show_quickquiz.html.erb
@@ -19,7 +19,7 @@
                         </ul>
                     </div>
 
-					<%= flash_messages %>
+					<%= flash_messages %>	
 
 					<% if !@challenge_detail["Description__c"].nil? %>
                     	<h3>Overview</h3>
@@ -137,6 +137,7 @@
 										<%= f.hidden_field :reply_to, :value => params[:reply_to] %>
 										<%= recaptcha_tags %>
 									  <a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
+									  <div style="float:right;padding-top:7px;padding-right:125px;font-size:11px"><%= link_to @participation_status[:send_discussion_emails] ? "Stop sending me" : "Please send me", toggle_discussion_email_path %> discussion emails for this challenge.</div>
 									<% end %>
 								<% else %>
 									Please <a href="/login_popup" class="fancy">login</a> to post a comment.
