--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -78,85 +78,7 @@
                 <!-- END Challenge Information -->
 
                 <!-- Discussion -->
-                <div class="discussion recommendations">
-                    <h2>Discussion</h2>
-                    <!-- Box -->
-					<% @comments.each do |record| %> 
-						<% if record["Reply_To__c"].nil? %>
-							<!-- Box -->
-							<div class="box">
-							    <div class="box-b">
-							        <div class="box-t" id="commentdiv">
-							            <a href='/members/<%= record["Member__r"]["Name"] %>' class="fl">
-							                <img src="<%= record["Member__r"]["Profile_Pic__c"] %>" id="ctl00_Body_rptComment_ctl00_imgUser" width="50" height="50" alt="<%= record["Member__r"]["Name"] %>" /></a>
-							            <div class="text-holder fr">
-							                <div style="width: 480px; overflow-x: auto; overflow-y: hidden"><p style="padding-bottom: 15px"><%= raw(record["Comment__c"]) %></p></div>
-							                <span>
-												<a href='/members/<%= record["Member__r"]["Name"] %>'><%= record["Member__r"]["Name"] %></a>, <%= Time.parse(record["CreatedDate"]).strftime("%b. %d, %Y at %I:%M %p") %>&nbsp;&nbsp;
-							                    <a href="<%= challenge_path %>?reply_to=<%= record["Id"] %>#comment">Reply</a>
-											</span>
-							            </div>
-							            <div class="cl">
-							                &nbsp;</div>
-							        </div>
-							    </div>
-							</div>
-							<!-- END Box -->
-							
-		                    <!-- Replies -->
-							<% if !record["Challenge_Comments__r"].nil? %>
-								<% record["Challenge_Comments__r"]["records"].each do |reply| %> 
-				                    <!-- Reply Post -->
-									<div class="reply-post">
-									    <div class="box">
-									        <div class="box-b">
-									            <div class="box-t">
-									                <a href='/members/<%= reply["Member__r"]["Name"] %>' class="fl">
-									                    <img src="<%= reply["Member__r"]["Profile_Pic__c"] %>" width="50" height="50" alt="<%= reply["Member__r"]["Name"] %>"/></a>
-									                <div class="text-holder fr">
-									                    <div style="width: 450px; overflow-x: auto; overflow-y: hidden"><p style="padding-bottom: 15px"><%= raw(reply["Comment__c"]) %></p></div>
-									                    <span><a href='/members/<%= reply["Member__r"]["Name"] %>'><%= reply["Member__r"]["Name"] %></a>, <%= Time.parse(reply["CreatedDate"]).strftime("%b. %d, %Y at %I:%M %p") %> 
-									                </div>
-									                <div class="cl">&nbsp;</div>
-									            </div>
-									        </div>
-									    </div>
-									</div>
-				                    <!-- END Reply Post -->
-								<% end %>
-							<% end %>
-		                    <!-- END Replies -->
-							
-						<% end %>
-					<% end %>
-
-                    <div style="text-align: center"></div>
-                    <!-- END Box -->
-                    <!-- Post Comment -->
-					<a name="comment"></a>
-					<% if @challenge_detail["Is_Open__c"].eql?("true") %>
-	                    <div class="post-comment">
-	                        <h3>Post a Comment</h3>
-	                        <fieldset>
-								<% if signed_in? %>
-									<%= form_for :discussion, :url => challenge_comment_path, :name => 'new_comment' do |f| %>
-										<div class="holder">
-										<%= f.text_area( :comments, :cols => "80", :rows => "8", :value => session[:captcha_comments] )  %>
-										</div>
-										<%= f.hidden_field :reply_to, :value => params[:reply_to] %>
-										<%= recaptcha_tags %>
-									  <a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
-									<% end %>
-								<% else %>
-									Please <a href="/login_popup" class="fancy">login</a> to post a comment.
-								<% end %>
-	                        </fieldset>
-	                    </div>
-					<% else %>
-						<p>The discussion board is closed for this challenge.</p>
-					<% end %>
-                    <!-- END Post Comment -->
-                </div>
+				<%= render "shared/discussion_board" %>
                 <!-- END Discussion -->
 
 
