--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -321,6 +321,9 @@ var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfull
 	</table>
 <% end %>	
 
+<p>Remember, participants are only eligible for money if they score 75%+ for the total scorecard. If we are awarding money for 
+	multiple places, then please score accordingly.</p>
+
 <% if @scored %><h1>This scorecard has been scored and is not updateable.</h1><% end %>
 <div id="scorecard"></div>
 <form id="scorecard_form" action="<%= scorecard_save_path %>" method="post">
