--- a/app/views/quizes/results.html.erb
+++ b/app/views/quizes/results.html.erb
@@ -1,55 +1,23 @@
 <!-- <script src='<%= ENV['QUICK_QUIZ_STREAMING_URL'] %>/cometd.js' type='text/javascript'></script> -->
 
+<script type="text/javascript">
+$(document).ready(function(){
+$(".fancyanswer").fancybox({
+	 'width' : 900,
+	 'height' : 625,
+	 'autoScale' : false,
+	 'hideOnOverlayClick' : true,
+	 'type' : 'iframe',
+	 'onStart': function() { $('.column iframe').css('visibility', 'hidden'); },
+	 'onClosed': function() { $('.column iframe').css('visibility', 'visible'); }
+ });
+});
+</script>
+
 <script type='text/javascript'>
 <% if @results['Number_of_Answers_Submitted__c'] != 10 %>
 setTimeout("location.reload(true);",3000);
 <% end %>
-
-$(function() {
-  var channel = '/q/<%= @results['Id'] %>';
-  var username = '<%= current_user.username %>';
-  // array to hold all ids to use for dupe checks
-  var ids = [];
-  // create an array of answers already answered
-  var existingAnswers = <%= @answers.to_json.html_safe %>;
-  // connect to the cometd server
-  // var cometd = new Faye.Client('<%= ENV['QUICK_QUIZ_STREAMING_URL'] %>/cometd', {timeout: 120});
-  // cometd.disable('websocket');
-  
-  // load the html table with the existing answers
-  for (var i = 0; i < existingAnswers.length; i++) {
-	addRow(existingAnswers[i]);
-  }
-
-  // add a row to the end of the html table
-  function addRow(obj) {
-	// if the id is not already in the array then add it to the array and table
-	if ($.inArray(obj.Id, ids) == -1) {
-		$('#answers tr:last').after('<tr><td></td><td>'+ obj.Type__c +'</td><td>'+ obj.Elapsed_Time_Seconds__c +' seconds</td><td><img alt="'+ obj.Is_Correct__c +'" src="/assets/answer-'+ obj.Is_Correct__c +'.png" width="40"/></td></tr>');	
-		ids.push(obj.Id);
-		//console.log(obj.Id + ' - added');
-	} else {
-		//console.log(obj.Id + ' - exists');
-	}
-  }
-
-/**
-  if(channel) {
-    var subscription = cometd.subscribe(channel, function(message) {
-      console.log(message);
-      m = message.sobject;
-	  // add the new row
-	  addRow(m);
-    });
-    subscription.callback(function() {
-      console.log('Subscription is now active!');
-    });
-    subscription.errback(function(error) {
-      console.log(error.message);
-    });
-  }
-**/
-});
 </script>
 
 <div class="page-heading"><h2 class="melbourne">Today's Results for <%= current_user.username %></h2></div>
@@ -88,6 +56,13 @@ $(function() {
 						<div style="clear: both;padding-bottom:25px"></div>
 					
 					<% end %>
+
+					<table style="margin-bottom:10px">
+						<tr>
+							<td style="padding-right:10px"><img src="/assets/answer-false.png" width="40"/></td>
+							<td>Click the red icons below to see the details of the questions that are marked as incorrect. You can only see your incorrect answers and not the answers of other members.</td>
+						</tr>
+					</table>
 	
 					<table class="fancytable" id="answers" style="width:100%">
 					    <thead>
@@ -99,6 +74,19 @@ $(function() {
 					        </tr>
 					    </thead>
 					    <tbody>
+						<% @answers.each do |record|%>
+					    	<tr>
+								<td></td>
+								<td style="font-size:12px"><%= record["Type__c"]%></td>
+					            <td style="font-size:12px"><%= record["Elapsed_Time_Seconds__c"]%> seconds</td>
+								<td style="font-size:12px">
+								<% if record["Is_Correct__c"] %>
+									<img src="/assets/answer-true.png" width="40"/>
+								<% else %>
+									<a href="/quizes/answer_by_member/<%= record["Id"] %>" class="fancyanswer"><img src="/assets/answer-false.png" width="40"/></a>
+								<% end %>
+					        </tr>
+						<% end %>
 					    </tbody>
 					</table>
 
