--- a/app/views/quizes/results_by_member.html.erb
+++ b/app/views/quizes/results_by_member.html.erb
@@ -1,3 +1,17 @@
+<script type="text/javascript">
+$(document).ready(function(){
+$(".fancyanswer").fancybox({
+	 'width' : 900,
+	 'height' : 625,
+	 'autoScale' : false,
+	 'hideOnOverlayClick' : true,
+	 'type' : 'iframe',
+	 'onStart': function() { $('.column iframe').css('visibility', 'hidden'); },
+	 'onClosed': function() { $('.column iframe').css('visibility', 'visible'); }
+ });
+});
+</script>
+
 <div class="page-heading"><h2 class="melbourne">Results for <%=params[:member] %> on <%=params[:date] %></h2></div>
 <div class="page two-cols-bg top-border">
 <!-- Content Wrapper -->
@@ -7,6 +21,15 @@
                 <!-- Challenge Information -->
                 <div class="challenge-information">
 					<%= flash_messages %>
+
+					<table style="margin-bottom:10px">
+						<tr>
+							<td style="padding-right:10px"><img src="/assets/answer-false.png" width="40"/></td>
+							<td>Click the red icons below to see the details of the questions that are marked as incorrect. You can only see your incorrect answers and not the answers of other members.</td>
+						</tr>
+					</table>
+					 
+
 					<table class="fancytable" id="answers" style="width:100%;<% if @answers.size == 0 %>visibility:hidden;<% end %>">
 					    <thead>
 					    	<tr>
@@ -22,7 +45,12 @@
 								<td></td>
 								<td style="font-size:12px"><%= record["Type__c"]%></td>
 					            <td style="font-size:12px"><%= record["Elapsed_Time_Seconds__c"]%> seconds</td>
-								<td style="font-size:12px"><img alt="" src="/assets/answer-<%= record["Is_Correct__c"]%>.png" width="40"/></td>
+								<td style="font-size:12px">
+								<% if record["Is_Correct__c"] %>
+									<img src="/assets/answer-true.png" width="40"/>
+								<% else %>
+									<a href="/quizes/answer_by_member/<%= record["Id"] %>" class="fancyanswer"><img src="/assets/answer-false.png" width="40"/></a>
+								<% end %>
 					        </tr>
 						<% end %>
 					    </tbody>
