added quiz id to display

--- a/app/views/quizes/answer_by_member.html.erb
+++ b/app/views/quizes/answer_by_member.html.erb
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/assets/quickquiz/CodeMirror-2.2/lib/codemirror.css" />
 
 <div class="editPane">
+	    <div class="hint" style="float:right">Is there a problem with this question? Tell us about it. Question: <%= @answer_id %></div>
 	<strong>This is the "buggy" <%= @type %> code that was shown to you.</strong>
     <div id="incorrect"></div>
     <strong>This is the correct version.</strong>
