--- a/app/views/accounts/_menu.html.haml
+++ b/app/views/accounts/_menu.html.haml
@@ -1,7 +1,16 @@
 %h3 Account settings
 .menu.menu-separator
   %ul
-    = build_menu("top",selected_item)
+    = build_menu("account",selected_item)
+%h3 My Stuff
 .menu
   %ul
-    = build_menu("bottom",selected_item)
+    = build_menu("my",selected_item)
+%h3 Quick Quiz
+.menu
+  %ul
+    = build_menu("quickquiz",selected_item)
+%h3 Review Submissions
+.menu
+  %ul
+    = build_menu("review",selected_item)
