--- a/app/views/challenges/survey.html.erb
+++ b/app/views/challenges/survey.html.erb
@@ -32,7 +32,7 @@
 							</div>
 							<div class="spacer"></div>
 							
-							<label>2. Were the challenge requirements clearly stated and achievable?</label>
+							<label>2. Did you have enough time to complete the challenge?</label>
 							<div class="holder">
 							<input type="radio" name="survey[timeframe]" value="Yes" />
 							<%= label_tag("Yes") %><br/>
